--- a/AuthApp/src/main/resources/mail.properties
+++ b/AuthApp/src/main/resources/mail.properties
@@ -2,7 +2,7 @@
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=nagendraamr@gmail.com
-spring.mail.password=surya@52
+spring.mail.password=
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.debug=true
